--- a/style-textos.css
+++ b/style-textos.css
@@ -1,65 +1,83 @@
-*{
+* {
   font-family: Arial, Helvetica, sans-serif;
 }
-#image-container {
-    position: relative;
-    display: inline-block;
-  }
-  #text-center {
-    position: absolute;
-    top: 48%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: black;
-    font-size: 1100%;
-    font-weight: bold;
-    text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-  #text-prod {
-    position: absolute;
-    top: 30%;
-    left: 38%;
-    width: 100%;
-    transform: translate(-50%, -50%);
-    color: black;
-    font-size: 200%;
-    font-weight: bold;
-    text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-  #text-cod {
-    position: absolute;
-    top: 33%;
-    left: 29%;
-    transform: translate(-50%, -50%);
-    color: black;
-    font-size: 200%;
-    font-weight: bold;
-    text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    font-family: sans-serif;
-  }
-  #text-cor{
-    position: absolute;
-    top: 36%;
-    left: 26%;
-    transform: translate(-50%, -50%);
-    color: black;
-    font-size: 200%;
-    font-weight: bold;
-    text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-  #text-semjuros {
-    position: absolute;
-    top: 43%;
-    left: 52%;
-    width: 0 auto;
-    transform: translate(-50%, -50%);
-    color: black;
-    font-size: 600%;
-    font-weight: bold;
-    text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
+#text-center {        /* Valor do Produto */
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 800%;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+#text-prod {
+  position: absolute;
+  top: 32%;
+  left: 48%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 100%;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+#text-cod {
+  position: absolute;
+  top: 35%;
+  left: 33%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 100%;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  font-family: sans-serif;
+}
+#text-cor {
+  position: absolute;
+  top: 38%;
+  left: 29%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 100%;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+#text-semjuros {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  width: 0 auto;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 200%;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+#text-avista {
+  position: absolute;
+  top: 67%;
+  left: 33%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 120%;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+#text-cartao {
+  position: absolute;
+  top: 69%;
+  left: 33%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 120%;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
